# bitkub-rs

./: Cargo.toml  README.md
examples/: market_data.rs  orderbook_ws.rs  private_ws.rs  trading.rs
src/: auth.rs  client.rs  error.rs  lib.rs
src/models/: common.rs  crypto.rs  fiat.rs  market.rs  mod.rs  serde_helpers.rs  trading.rs  user.rs  websocket.rs
src/rest/: crypto.rs  fiat.rs  market.rs  mod.rs  public.rs  user.rs
src/ws/: mod.rs  orderbook.rs  private.rs  public.rs
